--- a/index.html
+++ b/index.html
@@ -173,6 +173,16 @@
         </div>
 
         <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Experience">
+            <img src="assets/img/portfolio/Pandas.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Advanced Python Data Analysis</h4>
+              <p>completed the course The Ultimate Pandas Bootcamp: Advanced Python Data Analysis</p>
+              <a href="assets/img/portfolio/Pandas.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Advanced Python Data Analysis"><i class="bx bx-plus"></i></a>
+              <a href="https://www.udemy.com/certificate/UC-29fcda96-53cf-4d13-b07e-f073b1086b2f/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
            <div class="col-lg-4 col-md-6 portfolio-item filter-Experience">
             <img src="assets/img/portfolio/javascript.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
