--- a/index.html
+++ b/index.html
@@ -185,9 +185,18 @@
             </div>
           </div>
            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/todo.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/weather.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Todo list Project </h4>
+              <p>In this project, we create react weather application with react using Open Weather API</p>
+              <a href="assets/img/portfolio/weather.png" data-gall="portfolioGallery" class="venobox preview-link" title="a day management task  application"><i class="bx bx-plus"></i></a>
+              <a href="https://github.com/HowkMii/Weather" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/todo.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Weather App </h4>
               <p>In this project, we create a day management task  application    using React with Context API and React Hooks</p>
               <a href="assets/img/portfolio/todo.png" data-gall="portfolioGallery" class="venobox preview-link" title="a day management task  application"><i class="bx bx-plus"></i></a>
               <a href="https://github.com/HowkMii/Todo" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
