--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-Mobile">Mobile</li>
               <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-Ai">Ai</li>
               <li data-filter=".filter-Design">Design</li>
               <li data-filter=".filter-Experience" >Experience</li>  
             </ul>
@@ -175,6 +176,16 @@
         
 
         <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Ai">
+            <img src="assets/img/portfolio/ai.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4> Online AI & DATA STRUCTURES Courses</h4>
+              <p>SIMPLE COURSES ON INSTEGRAM FOR KNOWLEDGE</p>
+              <a href="assets/img/portfolio/ai.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="AI & DATA STRUCTURES"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/howkmii/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-Mobile">
             <img src="assets/img/portfolio/auth.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -202,6 +213,37 @@
               <a href="https://github.com/HowkMii/Todo" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Mobile filter-web">
+            <img src="assets/img/portfolio/web.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4> Online Web and Mobile Courses</h4>
+              <p>SIMPLE COURSES ON INSTEGRAM FOR KNOWLEDGE</p>
+              <a href="assets/img/portfolio/web.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Online Web and Mobile Courses"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/howkmii/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Design">
+            <img src="assets/img/portfolio/art.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4> Online Design and Art Courses</h4>
+              <p>SIMPLE COURSES ON INSTEGRAM FOR KNOWLEDGE</p>
+              <a href="assets/img/portfolio/art.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Online Design and Art Courses"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/howkmii/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+           <div class="col-lg-4 col-md-6 portfolio-item filter-Design">
+            <img src="assets/img/portfolio/logoP.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Personal logo </h4>
+              <p>HOWKMII Personal logo design</p>
+              <a href="assets/img/portfolio/logoP.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="howkmii personal-identity"><i class="bx bx-plus"></i></a>
+              <a href="https://www.behance.net/gallery/109274807/Personal-logo-design" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-Design">
             <img src="assets/img/portfolio/bc.png" class="img-fluid" alt="">
             <div class="portfolio-info">
